--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 
-/* @import '@xyflow/react/dist/style.css'; */ /* Import React Flow styles - Temporarily commented out */
+@import '@xyflow/react/dist/style.css';
 
 @tailwind base;
 @tailwind components;
